--- a/stunnel.conf.pki-client.template
+++ b/stunnel.conf.pki-client.template
@@ -24,4 +24,4 @@ ciphers = DHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-G
 CAfile = ${STUNNEL_CAFILE}
 verifyChain = ${STUNNEL_VERIFY_CHAIN}
 verifyPeer = ${STUNNEL_VERIFY_PEER}
-
+checkHost = ${STUNNEL_CHECK_HOST}
