--- a/stunnel.conf.pki-client.template
+++ b/stunnel.conf.pki-client.template
@@ -17,8 +17,9 @@ options = NO_TLSv1.1
 options = CIPHER_SERVER_PREFERENCE
 options = DONT_INSERT_EMPTY_FRAGMENTS
 
-# A+ Cipher list - https://www.owasp.org/index.php/TLS_Cipher_String_Cheat_Sheet
-ciphers = DHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256
+# Grade A Cipher list
+# See: https://www.owasp.org/index.php/TLS_Cipher_String_Cheat_Sheet#Examples_for_cipher_strings
+ciphers = DHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-SHA256:DHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA256
 
 CAfile = ${STUNNEL_CAFILE}
 verifyChain = ${STUNNEL_VERIFY_CHAIN}
